@@ -27,12 +27,12 @@ escapeHtmlEntities :: Text     -- ^ Text to escape
 escapeHtmlEntities = T.foldr escape mempty
   where
     escape :: Char -> Builder -> Builder
-    escape '<'  b = B.fromText "&lt;"   `mappend` b
-    escape '>'  b = B.fromText "&gt;"   `mappend` b
-    escape '&'  b = B.fromText "&amp;"  `mappend` b
-    escape '"'  b = B.fromText "&quot;" `mappend` b
-    escape '\'' b = B.fromText "&#39;"  `mappend` b
-    escape x    b = B.singleton x       `mappend` b
+    escape '<'  b = B.fromText "&lt;"  `mappend` b
+    escape '>'  b = B.fromText "&gt;"  `mappend` b
+    escape '&'  b = B.fromText "&amp;" `mappend` b
+    escape '"'  b = B.fromText "&#34;" `mappend` b
+    escape '\'' b = B.fromText "&#39;" `mappend` b
+    escape x    b = B.singleton x      `mappend` b
 
 -- | Render a 'ChoiceString'. TODO: Optimization possibility, apply static
 -- argument transformation.
